school admin endpoints
